Point release adding additional wheels to support Apple Silicon.