@@ -12,10 +12,12 @@ namespace scenepic
   UIParameters::UIParameters(
     double pointer_alt_key_multiplier,
     double pointer_rotation_speed,
-    double mouse_wheel_translation_speed)
+    double mouse_wheel_translation_speed,
+    const std::string &layer_dropdown_visibility)
   : m_pointer_alt_key_multiplier(pointer_alt_key_multiplier),
     m_pointer_rotation_speed(pointer_rotation_speed),
-    m_mouse_wheel_translation_speed(mouse_wheel_translation_speed)
+    m_mouse_wheel_translation_speed(mouse_wheel_translation_speed),
+    m_layer_dropdown_visibility(layer_dropdown_visibility)
   {}
 
   double UIParameters::pointer_alt_key_multiplier() const
@@ -33,6 +35,11 @@ namespace scenepic
     return m_mouse_wheel_translation_speed;
   }
 
+  const std::string& UIParameters::layer_dropdown_visibility() const
+  {
+    return m_layer_dropdown_visibility;
+  }
+
   JsonValue UIParameters::to_json() const
   {
     JsonValue obj;
@@ -40,6 +47,7 @@ namespace scenepic
     obj["PointerAltKeyMultiplier"] = m_pointer_alt_key_multiplier;
     obj["PointerRotationSpeed"] = m_pointer_rotation_speed;
     obj["MouseWheelTranslationSpeed"] = m_mouse_wheel_translation_speed;
+    obj["LayerDropdownVisibility"] = m_layer_dropdown_visibility;
     return obj;
   }
 
@@ -50,7 +58,8 @@ namespace scenepic
         -std::numeric_limits<double>::infinity() ||
       m_pointer_rotation_speed != -std::numeric_limits<double>::infinity() ||
       m_mouse_wheel_translation_speed !=
-        -std::numeric_limits<double>::infinity());
+        -std::numeric_limits<double>::infinity() ||
+      !m_layer_dropdown_visibility.empty());
   }
 
   std::string UIParameters::to_string() const
@@ -63,7 +72,8 @@ namespace scenepic
     return UIParameters(
       -std::numeric_limits<double>::infinity(),
       -std::numeric_limits<double>::infinity(),
-      -std::numeric_limits<double>::infinity());
+      -std::numeric_limits<double>::infinity(),
+      "");
   }
 
 } // namespace scenepic
