@@ -266,7 +266,8 @@
 				"CommandType": "ConfigureUserInterface",
 				"MouseWheelTranslationSpeed": 0.0050000000000000001,
 				"PointerAltKeyMultiplier": 0.20000000000000001,
-				"PointerRotationSpeed": 0.01
+				"PointerRotationSpeed": 0.01,
+				"LayerDropdownVisibility": "visible"
 			},
 			{
 				"CommandType": "SetLayerSettings",
@@ -439,7 +440,8 @@
 				"CommandType": "ConfigureUserInterface",
 				"MouseWheelTranslationSpeed": 0.0050000000000000001,
 				"PointerAltKeyMultiplier": 0.20000000000000001,
-				"PointerRotationSpeed": 0.01
+				"PointerRotationSpeed": 0.01,
+				"LayerDropdownVisibility": "visible"
 			},
 			[
 				{
